--- a/style/main.css
+++ b/style/main.css
@@ -1,188 +1,142 @@
 :root{
-    --vermelho: #E50914;
-    --abc: #181690;
-}
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-/* ELEMENTOS BASE */
-
-body{
-    background: var(--abc);
-    font-family: 'Arial', Times, serif;
-    color: white;
-
-}
-
-header .container{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-header .logo{
-    color: var(--vermelho);
-    font-family: 'Aria Black', 'Times New Roman', Times, serif;
-    font-size: 40px;
-    margin-left: 5px;
-}
-
-header nav a{
-    text-decoration: none;
-    color:#AAA;
-    margin-right: 10px;
-}
-
-
-header nav a:hover{
-    color:#fff; 
+  --vermelho: #E50914;
+  --abc: #4560F5;
 }
 
 :root{
-    --vermelho: #E50914;
-    --preta: #141414;
-    --azul: #2a09e5;
+  --vermelho: #E50914;
+  --preta: #141414;
+  --azul: #4560F5;
 }
 
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
 
 /* ELEMENTOS BASE */
 
 body{
-    background: var(--preta);
-    font-family: 'Arial', Times, serif;
-    color: white;
-
+  background: var(--preta);
+  color: white;
+  font-family: 'Arial', Times, serif;
 }
 
 .frase::after {
-    content: '|';
-    margin-left: 5px;
-    opacity: 1;
-    animation: piscar .7s infinite;
+animation: piscar .7s infinite;
+  content: '|';
+  margin-left: 5px;
+  opacity: 1;
 }
 
 @keyframes piscar {
-    0%, 100%{
-        opacity: 1;
-    }
-    50% {
-        opacity: 0;
-    }
+  0%, 100%{
+      opacity: 1;
+  }
+  50% {
+      opacity: 0;
+  }
 }
 
 header .container{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+align-items: center;
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-between;
 }
 
 header .logo{
-    color: var(--azul);
-    font-family: 'Aria Black', 'Times New Roman', Times, serif;
-    font-size: 40px;
-    margin-left: 5px;
+  color: var(--azul);
+  font-family: 'Aria Black', 'Times New Roman', Times, serif;
+  font-size: 40px;
+  margin-left: 5px;
 }
 
 header nav a{
-    text-decoration: none;
-    color: var(--azul);
-    margin-right: 10px;
-    font-size: 25px;
+  color: var(--azul);
+  font-size: 25px;
+  margin-right: 10px;
+  text-decoration: none;
 }
-
 
 header nav a:hover{
-    color:#fff; 
+  color:#fff; 
 }
-
 
 /* FILME PRINCIPAL */
 
 .filme-principal{
-    font-size: 16px;
-    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('/img/capa.jpg');
-    height: 500px;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+  align-items: flex-start;
+  background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('/img/capa.jpg');
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  height: 500px;
+  justify-content: center;
 }
 
 .filme-principal .descricao{
-    margin-top: 10px;
-    margin-bottom: 40px;
+  margin-bottom: 40px;
+  margin-top: 10px;
 }
 
 .filme-principal .titulo{
-    margin-top: 15%;
-    font-size: 40px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 40px;
+  margin-top: 15%;
 }
 
 
 .botao{
-    background-color: rgba(0,0,0,.50);
-    border: none;
-    color: white;
-    padding: 15px 30px;
-    margin-right: 15px;
-    font-size: 12px;
-    cursor: pointer;
-    transition: .3s ease all;
+  background-color: rgba(0,0,0,.50);
+  border: none;
+  color: white;
+  cursor: pointer;
+  font-size: 12px;
+  margin-right: 15px;
+  padding: 15px 30px;
+  transition: .3s ease all;
 }
 
 .botao:hover{
-    background-color: white;
-    color: black;
-  
+  background-color: white;
+  color: black;
 }
 
 .botao i{
-    margin-right:5px;
+  margin-right:5px;
 }
 
 /* wrapper = envelopar */
 
 .container {
-    margin-left: 30px;
+  margin-left: 30px;
 }
 
 .filme-principal .container {
-    width:70%;
+  width:70%;
 }
 
 .container {
-    margin-left: 30px;
+  margin-left: 30px;
 }
 
-
 .box-filme{
-    height: 100%;
-    width: 100%;
-    display: block;
-    margin-bottom: 200px;
+  height: 100%;
+  display: block;
+  margin-bottom: 200px;
+  width: 100%;
 }
 
 .carrosel-filmes{
-    height: 600px;
-    margin-top: 10px;
-    padding-bottom: -400px;
+  height: 600px;
+  margin-top: 10px;
+  padding-bottom: -400px;
 }
 
 .carrosel-filmes2{
-    margin-top: 0px;
+  margin-top: 0px;
 }
